--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -11,7 +11,7 @@
     <title>Home page 0</title>
   </head>
   <body>
-    <h1>Home Page 12</h1>
+    <h1>Home Page of El petrio</h1>
     <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
 
     <!-- Optional JavaScript -->
