--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -10,9 +10,256 @@
 
     <title>Home page 0</title>
   </head>
+  <style>
+    .desktop-1 .we-take-care-of-your-pets {
+    margin: 0 0 83px 112.3px;
+    display: inline-block;
+    align-self: center;
+    overflow-wrap: break-word;
+    font-family: 'Inknut Antiqua';
+    font-weight: 700;
+    font-size: 35px;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+  }
+  .desktop-1 {
+    background: #57565C;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-bottom: 69px;
+    width: 1440px;
+    box-sizing: border-box;
+  }
+  .desktop-1 .pet-healthcare-photo-1 {
+    box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    background: url('../assets/images/petHealthcarePhoto1.jpeg') 50% / cover no-repeat;
+    width: 440px;
+    height: 630px;
+  }
+  .desktop-1 .line-1 {
+    background: #53B94A;
+    transform: rotate(54.866deg);
+    margin: 0 9px;
+    align-self: flex-start;
+    width: 19px;
+    height: 6px;
+  }
+  .desktop-1 .line-2 {
+    background: #53B94A;
+    transform: rotate(-41.553deg);
+    margin-bottom: 4px;
+    align-self: flex-end;
+    width: 44px;
+    height: 8px;
+  }
+  .desktop-1 .el-petrio-pet-care-system {
+    margin: 0 50px 7px 0;
+    width: 436.6px;
+    text-align: center;
+    overflow-wrap: break-word;
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 80px;
+    color: #E6E6FA;
+  }
+  .el-petrio-pet-care-system {
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 1.333;
+  }
+  .el-petrio-pet-care-system-sub692 {
+    font-family: 'Kaushan Script', 'Roboto Condensed';
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 1.333;
+    color: #E6E6FA;
+  }
+  .desktop-1 .line-3 {
+    background: #53B94A;
+    transform: rotate(54.866deg);
+    margin-bottom: 96px;
+    align-self: flex-start;
+    width: 19px;
+    height: 6px;
+  }
+  .desktop-1 .line-4 {
+    background: #53B94A;
+    transform: rotate(-41.553deg);
+    margin: 0 9px 4px 9px;
+    align-self: flex-end;
+    width: 44px;
+    height: 8px;
+  }
+  .desktop-1 .line-5 {
+    background: #53B94A;
+    transform: rotate(54.866deg);
+    margin-bottom: 108px;
+    align-self: flex-start;
+    width: 19px;
+    height: 6px;
+  }
+  .desktop-1 .line-6 {
+    background: #53B94A;
+    transform: rotate(-41.553deg);
+    margin: 0 9px 4px 9px;
+    align-self: flex-end;
+    width: 44px;
+    height: 8px;
+  }
+  .desktop-1 .pet-health-tracker {
+    margin-bottom: 80px;
+    display: inline-block;
+    align-self: flex-start;
+    overflow-wrap: break-word;
+    font-family: 'Inter';
+    font-weight: 600;
+    font-size: 32px;
+    color: #FFFFFF;
+  }
+  .desktop-1 .information-and-health-record {
+    overflow-wrap: break-word;
+    font-family: 'Inter';
+    font-weight: 600;
+    font-size: 32px;
+    color: #FFFFFF;
+  }
+  .desktop-1 .home {
+    margin-right: 24px;
+    width: 159px;
+    overflow-wrap: break-word;
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 40px;
+    color: #E6E6FA;
+  }
+  .desktop-1 .services {
+    overflow-wrap: break-word;
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 40px;
+    color: #E6E6FA;
+  }
+  .desktop-1 .pricing {
+    overflow-wrap: break-word;
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 40px;
+    color: #E6E6FA;
+  }
+  .desktop-1 .person-1-log-out {
+    overflow-wrap: break-word;
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 35px;
+    color: #FFFFFF;
+  }
+  .desktop-1 .container {
+    margin: 145px 25px 227px 0;
+    display: flex;
+    flex-direction: column;
+    width: 74px;
+    height: fit-content;
+    box-sizing: border-box;
+  }
+  .desktop-1 .container-1 {
+    margin: 0 130px;
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    box-sizing: border-box;
+  }
+  .desktop-1 .container-2 {
+    background: #136262;
+    position: relative;
+    margin-bottom: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 14px 94.3px 23px 45.4px;
+    width: 1450px;
+    box-sizing: border-box;
+  }
+  .desktop-1 .container-3 {
+    margin-top: 23px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 823.7px;
+    height: fit-content;
+    box-sizing: border-box;
+  }
+  .desktop-1 .container-4 {
+    margin: 140px 136px 332px 0;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+  }
+  .desktop-1 .container-5 {
+    margin: 3px 0 33px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 559.7px;
+    height: fit-content;
+    box-sizing: border-box;}
+  </style>
   <body>
-    <h1>Home Page of El petrio</h1>
-    <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+    <div class="desktop-1">
+      <div class="container-2">
+        <p class="el-petrio-pet-care-system">
+          <span class="el-petrio-pet-care-system-sub-692"></span><span></span>
+        </p>
+        <div class="container-3">
+          <div class="container-5">
+            <span class="home">
+              Home
+            </span>
+            <span class="services">
+              Services
+            </span>
+            <span class="pricing">
+              Pricing
+            </span>
+          </div>
+          <span class="person-1-log-out">
+            Person 1<br />
+            <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+          </span>
+        </div>
+      </div>
+      <div class="we-take-care-of-your-pets">
+        We take care of your pets
+      </div>
+      <div class="container-1">
+        <div class="container">
+          <div class="line-4">
+          </div>
+          <div class="line-3">
+          </div>
+          <div class="line-6">
+          </div>
+          <div class="line-5">
+          </div>
+          <div class="line-2">
+          </div>
+          <div class="line-1">
+          </div>
+        </div>
+        <div class="container-4">
+          <div class="pet-health-tracker">
+            Pet Health Tracker
+          </div>
+          <span class="information-and-health-record">
+            Information and Health record
+          </span>
+        </div>
+        <div class="pet-healthcare-photo-1">
+        </div>
+      </div>
+    </div>
+    <!-- <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a> -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
