--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -211,6 +211,18 @@
         <p class="el-petrio-pet-care-system">
           <span class="el-petrio-pet-care-system-sub-692"></span><span></span>
         </p>
+        <div class="col-md-4 mt-4">
+        <div class="card">
+            <div class="card-header bg-info text-White">
+                Greetings
+            </div>
+            <div class="card-body">
+                <marquee behavior="" direction="">
+                    <h3 class="my-4">Welcome to El Petrio</h3>
+                </marquee>
+            </div>
+        </div>
+    </div>
         <div class="container-3">
           <div class="container-5">
             <span class="home">
