--- a/registration/templates/user.html
+++ b/registration/templates/user.html
@@ -10,9 +10,8 @@
                     <hr>
                     <form action="">
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Name</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
+                            <label for="username">Name</label>
+                           <input type="text" placeholder="Name" name="username" id="username">
                         </div>
                         <div class="form-group">
                             <label for="inputState">Role</label>
