--- a/registration/templates/services.html
+++ b/registration/templates/services.html
@@ -13,6 +13,33 @@
     <br>
     <input type="text" name="firstname" id="name" placeholder="Enter Your First Name">
     <br>
+    <label>Last name : </label>
+    <br>
+    <input type="text" name="lastname" id="name" placeholder="Enter Your Last Name">
+    <br>
+    <label>Age : </label>
+    <br>
+    <input type="number" name="age" id="name" placeholder="Enter Your Age">
+    <br>
+    <label>Email : </label>
+    <br>
+    <input type="email" name="email" id="name" placeholder="Enter Your Valid Mail">
+    <br>
+    <label>Contact No. : </label>
+    <br>
+    <input type="number" name="contact no." id="name" placeholder="Enter Your Contact Number">
+    <br>
+    <label>Gender : </label>
+    &nbsp;&nbsp;&nbsp;
+    <input type="radio" name="gender" id="male">
+    &nbsp;
+    <span id="male">Male</span>
+    <br>
+    &nbsp;&nbsp;&nbsp;
+    <input type="radio" name="gender" id="female">
+    &nbsp;
+    <span id="female">Female</span>
+    <br>
     </form>
     </div><!--end register-->
 </div><!--end main-->
