--- a/registration/templates/services.html
+++ b/registration/templates/services.html
@@ -29,17 +29,13 @@
     <br>
     <input type="number" name="contact no." id="name" placeholder="Enter Your Contact Number">
     <br>
+    <div class="input-name">
     <label>Gender : </label>
-    &nbsp;&nbsp;&nbsp;
-    <input type="radio" name="gender" id="male">
-    &nbsp;
-    <span id="male">Male</span>
-    <br>
-    &nbsp;&nbsp;&nbsp;
-    <input type="radio" name="gender" id="female">
-    &nbsp;
-    <span id="female">Female</span>
-    <br>
+    <input type="radio" class="radio-button" name="r1">
+    <label>Male</label>
+    <input type="radio" class="radio-button" name="r1">
+    <label>Female</label>
+    </div>
     </form>
     </div><!--end register-->
 </div><!--end main-->
