--- a/registration/templates/services.html
+++ b/registration/templates/services.html
@@ -9,29 +9,35 @@
     <div class="register">
     <h2>Pet Profile</h2>
     <form id="register" method="post">
-    <div>
+    <div class="input-name">
     <label>First Name : </label>
     <br>
     <input type="text" name="firstname" id="name" placeholder="Enter Your First Name">
     </div>
     <br>
-    <div>
+    <div class="input-name">
     <label>Last name : </label>
     <br>
     <input type="text" name="lastname" id="name" placeholder="Enter Your Last Name">
     </div>
     <br>
+    <div class="input-name">
     <label>Age : </label>
     <br>
     <input type="number" name="age" id="name" placeholder="Enter Your Age">
+    </div>
     <br>
+    <div class="input-name">
     <label>Email : </label>
     <br>
     <input type="email" name="email" id="name" placeholder="Enter Your Valid Mail">
+    </div>
     <br>
+    <div class="input-name">
     <label>Contact No. : </label>
     <br>
     <input type="tel" name="contact no." id="name" placeholder="Enter Your Contact Number">
+    </div>
     <br>
     <div class="input-name">
     <label>Gender : </label>
