--- a/registration/templates/services.html
+++ b/registration/templates/services.html
@@ -58,6 +58,16 @@
     </select>
     </div>
     <br>
+    <div class="input-name">
+    <label>Special Marks : </label>
+    <input type="text" name="special marks" id="name" placeholder="if any">
+    </div>
+    <br>
+    <div class="input-name">
+    <label>Breed : </label>
+    <input type="text" name="breed" id="name" placeholder="Enter pets breed">
+    </div>
+    <br>
     </form>
     </div><!--end register-->
 </div><!--end main-->
