--- a/registration/templates/services.html
+++ b/registration/templates/services.html
@@ -2,8 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <title>Fill Up Your Pet Details</title>
 </head>
+<style>
+*{
+     margin: 0;
+     padding: 0;
+}
+body{
+     background: rgb(230, 227, 227);
+     back-ground-size: 280%;
+     background-position: -400px 0px;
+}
+div.main{
+    width:  400px;
+    margin: 100px auto 0px auto;
+}
+h2{
+     text-align: center;
+     padding: 20px;
+     font-family: sans-serif;
+}
+  </style>
 <body>
 <div class="main">
     <div class="register">
@@ -37,7 +62,7 @@
     <div class="input-name">
     <label>Contact No. : </label>
     <br>
-    <input type="tel" name="contact no." id="number" placeholder="Enter Your Contact Number">
+    <input type="tel" name="contact no." id="number" placeholder="Enter Contact Number">
     </div>
     <br>
     <div class="input-name">
