--- a/registration/templates/services.html
+++ b/registration/templates/services.html
@@ -19,7 +19,7 @@ h2{
      border-bottom: 2px solid green;
 }
 form{
-     width: 300px;
+     width: 400px;
      background: #fff;
      padding: 15px 40px 40px;
      margin: 50px auto 0;
@@ -30,9 +30,9 @@ form{
 <body>
 <div class="main">
     <div class="register">
-    <h2>Pet Profile</h2>
     <form id="register" method="post">
     {% csrf_token %}
+    <h2>Pet Profile</h2>
     <div class="input-name">
     <label>First Name : </label>
     <br>
@@ -103,6 +103,7 @@ form{
     </div>
     <br>
     <div class="input-name">
+        <label>Terms and Conditions : </label>
         <label><input type="checkbox" class="check-button"> I accept the terms and conditions.</label>
     </div>
     <br>
