--- a/registration/templates/user.html
+++ b/registration/templates/user.html
@@ -1,7 +1,13 @@
-{% block title %} User page {% endblock %}
-
-{% block content %}
- <!--Table-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=1 shrink-to-fit=no">
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>User page</title>
+</head>
+<body>
     <div class="container">
         <div class="row my-4">
             <div class="col-md-4">
@@ -10,7 +16,7 @@
                     <hr>
                     <form action="">
                         <div class="form-group">
-                            <label for="username">Name</label>
+                            <label for="username">Name</label><br>
                            <input type="text" placeholder="Name" name="username" id="username">
                         </div>
                         <div class="form-group">
@@ -80,11 +86,6 @@
                 </table>
             </div>
         </div>
-
     </div>
-
-
-
-    <!--End Table-->
-
-{% endblock %}
+</body>
+</html>
