--- a/registration/templates/user.html
+++ b/registration/templates/user.html
@@ -17,7 +17,7 @@
                     <form action="">
                         <div class="form-group">
                             <label for="username">Name</label><br>
-                           <input type="text" placeholder="Name" name="username" id="username">
+                           <input type="text" placeholder="Enter Your Name" name="username" id="username">
                         </div>
                         <div class="form-group">
                             <label for="inputState">Role</label>
