--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -229,7 +229,7 @@
               Home
             </span>
             <span class="services">
-              Services
+              <a href="{% url 'newservices' %}" class="btn btn-primary">Services</a>
             </span>
             <span class="pricing">
               Pricing
