--- a/registration/templates/newservices.html
+++ b/registration/templates/newservices.html
@@ -28,6 +28,10 @@
 </style>
 <body>
 <div>
+    <span class="Daycare">
+        Daycare <br>
+            <a href="{% url 'service' %}" class="btn btn-primary">Sign In</a>
+    </span>
     <div class="Welcome to El Petrio Services">
         Welcome To El Petrio Services.
     </div>
