commit raiyan 1st

--- a/registration/templates/service.html
+++ b/registration/templates/service.html
@@ -32,7 +32,7 @@ form{
     <div class="register">
     <form id="register" method="post">
     {% csrf_token %}
-    <h2>Pet Profile</h2>
+    <h2>Pet Daycare Form</h2>
     <div class="input-name">
     <label>First Name : </label>
     <br>
