--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -105,9 +105,10 @@
 
   <!-- Navigation -->
   <nav class="navigation">
-    <a href="#">Home</a>
-    <a href="#">Services</a>
+    <a href="{% url 'home' %}">Home</a>
+    <a href="{% url 'newservices' %}">Services</a>
     <a href="#">Pricing</a>
+    <a href="{% url 'Buying' %}">Buying</a>
     <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
   </nav>
 
