commit raiyan 22nd

--- a/registration/templates/Buying.html
+++ b/registration/templates/Buying.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buying Page - PetCare</title>
+    <title>Buying</title>
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: arial, sans-serif;
+
+
         }
         .header {
-            background-color: lightgreen;
+            background-color: #136262;
             padding: 20px;
             text-align: center;
         }
@@ -31,6 +34,11 @@
     </div>
     <div class="content">
         <h2>Search Results</h2>
+        <style>
+            {
+            color: black
+            }
+        </style>
         <form method="get">
             <input type="text" name="query" placeholder="Search by breed">
             <input type="number" name="min_age" placeholder="Min Age">
