commit raiyan 23nd

--- a/registration/templates/Buying.html
+++ b/registration/templates/Buying.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buying</title>
+
+
 
     <style>
         body {
@@ -28,12 +29,17 @@
         }
     </style>
 </head>
+
 <body>
+
     <div class="header">
-        <h1>Buying Page - PetCare</h1>
+        <h1>Buying Page </h1>
     </div>
     <div class="content">
+
         <h2>Search Results</h2>
+
+
         <style>
             {
             color: black
@@ -64,5 +70,7 @@
             <p>No pets found.</p>
         {% endif %}
     </div>
+
 </body>
+
 </html>
