--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -102,11 +102,14 @@
   <header class="header">
     <h1>Welcome to El Petrio</h1>
   </header>
+  <div>
+
+  </div>
 
   <!-- Navigation -->
   <nav class="navigation">
     <a href="{% url 'home' %}">Home</a>
-    <a href="{% url 'newservices' %}">Services</a>
+    <a href="{% url 'newservices' %}">Daycare Service</a>
     <a href="#">Pricing</a>
     <a href="{% url 'Buying' %}">Buying</a>
     <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
