--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -27,7 +27,7 @@
     }
 
     .header h1 {
-      font-family: 'Arial Black', sans-serif;
+      font-family: 'tauri', sans-serif;
       font-size: 36px;
       font-weight: 900;
       margin-bottom: 0;
@@ -44,7 +44,7 @@
     .navigation a {
       color: #FFFFFF;
       margin: 0 10px;
-      font-family: 'Arial', sans-serif;
+      font-family: 'tauri', sans-serif;
       font-size: 18px;
       text-decoration: none;
       transition: color 0.3s ease;
@@ -65,7 +65,7 @@
     }
 
     .content h2 {
-      font-family: 'Arial Black', sans-serif;
+      font-family: 'tauri', sans-serif;
       font-size: 24px;
       font-weight: 700;
       color: #136262;
@@ -73,7 +73,7 @@
     }
 
     .content p {
-      font-family: 'Arial', sans-serif;
+      font-family: 'tauri', sans-serif;
       font-size: 16px;
       line-height: 1.6;
       color: #333333;
