--- a/registration/templates/newservices.html
+++ b/registration/templates/newservices.html
@@ -10,7 +10,7 @@
   display: inline-block;
   align-self: center;
   overflow-wrap: break-word;
-  font-family: 'arial';
+  font-family: 'tauri';
   font-weight: 700;
   font-size: 35px;
   text-decoration-line: underline;
