--- a/registration/templates/newservices.html
+++ b/registration/templates/newservices.html
@@ -5,18 +5,22 @@
     <title>Service page</title>
 </head>
 <style>
-  .container.Welcome to El petrio Services{
-  margin: 0 0 83px 112.3px;
-  display: inline-block;
-  align-self: center;
-  overflow-wrap: break-word;
-  font-family: 'tauri';
-  font-weight: 700;
-  font-size: 35px;
-  text-decoration-line: underline;
-  color: #FFFFFF;
-  }
-  .container{
+    .header {
+      background-color: #136262;
+      color: #FFFFFF;
+      padding: 20px;
+      text-align: center;
+
+    }
+
+    .header h1 {
+      font-family: 'arial', sans-serif;
+      font-size: 36px;
+      font-weight: 900;
+      margin-bottom: 0;
+    }
+
+    .container{
   background: #57565C;
   display: flex;
   flex-direction: column;
@@ -25,9 +29,38 @@
   width: 1440px;
   box-sizing: border-box;
   }
+    .navigation {
+      background-color: #136262;
+      padding: 10px;
+      text-align: center;
+      width: 100%;
+    }
+
+    .navigation a {
+      color: #FFFFFF;
+      margin: 0 10px;
+      font-family: 'tauri', sans-serif;
+      font-size: 18px;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .navigation a:hover {
+      color: #53B94A;
+    }
 </style>
 <body>
 <div>
+    <div class="header">
+        <h1>Daycare </h1>
+    </div>
+     <nav class="navigation">
+    <a href="{% url 'home' %}">Home</a>
+    <a href="{% url 'newservices' %}">Daycare Service</a>
+    <a href="#">Pricing</a>
+    <a href="{% url 'Buying' %}" class="underlined-heading">Buying</a>
+    <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+  </nav>
     <span class="Daycare">
         Daycare <br>
             <a href="{% url 'service' %}" class="btn btn-primary">Sign In</a>
