--- a/registration/templates/Buying.html
+++ b/registration/templates/Buying.html
@@ -75,7 +75,9 @@
             color: black
             }
         </style>
-        <form method="get"  >
+        <form method="GET" action="{% url 'Buying' %}">
+    <input type="text" name="q" placeholder="Search for pets...">
+    <button type="submit">Search</button>
 
             <input type="text" name="query" placeholder="Search by breed">
             <input type="number" name="min_age" placeholder="Min Age">
@@ -83,7 +85,7 @@
             <input type="text" name="location" placeholder="Location">
             <input type="number" name="min_price" placeholder="Min Price">
             <input type="number" name="max_price" placeholder="Max Price">
-            <button type="submit">Search</button>
+
         </form>
         {% if pets %}
             <ul>
