--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -113,6 +113,8 @@
     <a href="#">Pricing</a>
     <a href="{% url 'Buying' %}">Buying</a>
     <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+    <a href="{% url 'Adoption' %}">Pet Adoption</a>
+
   </nav>
 
   <!-- Main content -->
