--- a/registration/templates/Buying.html
+++ b/registration/templates/Buying.html
@@ -61,6 +61,7 @@
     <a href="{% url 'newservices' %}">Daycare Service</a>
     <a href="#">Pricing</a>
     <a href="{% url 'Buying' %}" class="underlined-heading">Buying</a>
+        <a href="{% url 'Adoption' %}">Pet Adoption</a>
     <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
   </nav>
 
