--- a/registration/templates/service.html
+++ b/registration/templates/service.html
@@ -36,19 +36,19 @@ form{
     <div class="input-name">
     <label>First Name : </label>
     <br>
-    <input type="text" name="firstname" id="name" placeholder="Enter Your First Name">
+    <input type="text" name="firstname" id="firstname" placeholder="Enter Your First Name">
     </div>
     <br>
     <div class="input-name">
     <label>Last name : </label>
     <br>
-    <input type="text" name="lastname" id="name" placeholder="Enter Your Last Name">
+    <input type="text" name="lastname" id="lastname" placeholder="Enter Your Last Name">
     </div>
     <br>
     <div class="input-name">
     <label>Age : </label>
     <br>
-    <input type="number" name="age" id="number" placeholder="Enter Your Age">
+    <input type="number" name="age" id="age" placeholder="Enter Your Age">
     </div>
     <br>
     <div class="input-name">
