changed couple of things

--- a/registration/templates/login.html
+++ b/registration/templates/login.html
@@ -131,6 +131,11 @@ button{
 .social i{
   margin-right: 4px;
 }
+.title{
+font-size: 20px;
+margin-left: 120px;
+
+}
 
     </style>
 </head>
@@ -140,6 +145,7 @@ button{
         <div class="shape"></div>
     </div>
     <form method="post">
+        <p class="title">El Petrio</p>
         <h3>Login Here</h3>
         {% csrf_token %} 
         <label for="username">Username</label>
