--- a/registration/templates/newservices.html
+++ b/registration/templates/newservices.html
@@ -12,7 +12,7 @@
         }
 
         .container-main {
-            background-color: #f8f9fa;
+            background-color: #7ee0e3;
             padding-top: 20px;
             padding-bottom: 20px;
         }
@@ -80,6 +80,12 @@
         .sign-in-link:hover {
             background-color: #53B94A;
         }
+        .images{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
     </style>
 </head>
 <body>
@@ -97,12 +103,12 @@
 
     </nav>
 
-    <img src="images/money can't buy you time oh really.png" alt="image">
+    <img class="images" src="https://www.womensonlinemagazine.com/wp-content/uploads/2020/11/oakland-and-east-bay-dog-daycare-1024x683-1.jpg" alt="image">
     <div class="container">
         <div class="Welcome">
             Welcome To El Petrio Services.
         </div>
-        <a href="{% url 'service' %}" class="sign-in-link">Sign In</a>
+        <a href="{% url 'service' %}" class="sign-in-link">DayCare</a>
     </div>
 </div>
 </body>
