--- a/registration/templates/signup.html
+++ b/registration/templates/signup.html
@@ -131,6 +131,13 @@ button{
 .social i{
   margin-right: 4px;
 }
+.title{
+font-size: 20px;
+margin-left: 145px;
+margin-bottom: 0PX;
+padding-bottom: 0px;
+
+}
 
     </style>
 </head>
@@ -141,6 +148,7 @@ button{
     </div>
     <form action="" method="post">
         {% csrf_token %} 
+        <p class="title">El petrio</p>
         <h3>Signup Here</h3>
 
         <label for="username">Username</label>
