--- a/registration/templates/service.html
+++ b/registration/templates/service.html
@@ -12,7 +12,7 @@
 <style type="text/CSS">
 body{
      font-size: 16px;
-     background: #f9f9f9;
+     background: #7ee0e3;
 }
 h2{
      text-align: center;
