--- a/registration/templates/service.html
+++ b/registration/templates/service.html
@@ -26,8 +26,41 @@ form{
      border: 2px solid #ccc;
      border-radius: 5px;
 }
+
+.navigation {
+            background-color: #136262;
+            padding: 50px;
+            text-align: center;
+            width: 100%;
+        }
+
+        .navigation a {
+            color: #FFFFFF;
+            margin: 0 10px;
+            font-family: 'tauri', sans-serif;
+            font-size: 18px;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .navigation a:hover {
+            color: #53B94A;
+        }
   </style>
 <body>
+
+    
+    <nav class="navigation">
+        <h2 style="color: white;">Pet Daycare!</h2>
+        <a href="{% url 'home' %}">Home</a>
+        <a href="{% url 'newservices' %}">Daycare Service</a>
+        <a href="#">Pricing</a>
+        <a href="{% url 'Buying' %}">Buying</a>
+        <a href="{% url 'Adoption' %}">Pet Adoption</a>
+        <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+
+    </nav>
+
 <div class="main">
     <div class="register">
     <form id="register" method="post">
@@ -111,7 +144,7 @@ form{
         <input type="submit" class="btn btn-success btn-block" value="submit">
     </div>
     </form>
-    </div><!--end register-->
-</div><!--end main-->
+    </div>
+</div>
 </body>
 </html>
