--- a/registration/templates/Buying.html
+++ b/registration/templates/Buying.html
@@ -1,4 +1,4 @@
-<!-- templates/homepage/buying_page.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,6 +18,7 @@
             background-color: #136262;
             padding: 20px;
             text-align: center;
+            color: white;
         }
         .content {
             background-color: lightgrey;
@@ -61,7 +62,7 @@
         display: none;
     }
     @media only screen and (max-width: 600px) {
-        /* Adjust styles for smaller screens */
+        
         #container {
             padding: 0 10px;
         }
@@ -151,7 +152,7 @@
             var petName = document.getElementById("petName").value;
             var petPrice = document.getElementById("petPrice").value;
     
-            // You can perform validation here if needed
+            
     
             // Display the added pet in the list with a Purchase button
             var petList = document.getElementById("petList");
