Adoption page changed

--- a/registration/templates/Buying.html
+++ b/registration/templates/Buying.html
@@ -59,8 +59,19 @@
         font-size: 25px;
     }
     #addPetForm {
-        display: none;
-    }
+    display: block;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    background-color: #f9f9f9;
+}
+#petList {
+    display: block;
+    border: 2px solid #82a7ca;
+    border-radius: 5px;
+    padding: 20px;
+    background-color: #fefefe;
+}
     @media only screen and (max-width: 600px) {
         
         #container {
