--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -110,7 +110,7 @@
   <nav class="navigation">
     <a href="{% url 'home' %}">Home</a>
     <a href="{% url 'newservices' %}">Daycare Service</a>
-    <a href="#">Pricing</a>
+    <a href="{% url 'pricing' %}">Pricing</a>
     <a href="{% url 'Buying' %}">Buying</a>
     <a href="{% url 'Adoption' %}">Pet Adoption</a>
     <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
